nova_tests/plan103_2/negative/atomic_i32_no_such_static_neg.nv
// Plan 103.2 Ф.9 negative — non-existent static constructor on AtomicI32.
//
// EXPECT_CC_ERROR Nova_AtomicI32_static_from_bytes
//
// `AtomicI32.from_bytes()` doesn't exist — codegen emits a call to
// `Nova_AtomicI32_static_from_bytes` which is not declared → CC error.

module nova_tests.plan103_2.negative.atomic_i32_no_such_static_neg

fn bad() -> AtomicI32 => AtomicI32.from_bytes()

test "should not compile" {
    let _ = bad()
    assert(true)
}
